Fixed z-index for the tip

--- a/src/blocks/order-counting/order-counting.scss
+++ b/src/blocks/order-counting/order-counting.scss
@@ -71,7 +71,6 @@
     border: 1px solid rgba($dark-color, 0.25);
     color: rgba($dark-color, 0.25);
     cursor: pointer;
-    z-index: 10;
 
     &:hover::before,
     &:focus::before {
@@ -87,6 +86,7 @@
 
       border-radius: 4px;
       font-size: $fontTiny;
+      z-index: 2;
     }
   }
 }
